After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697325 - GUPnP-AV-CP cannot control Windows 7 DMR
GUPnP-AV-CP cannot control Windows 7 DMR
Status: RESOLVED FIXED
Product: gupnp-tools
Classification: Other
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-05 10:43 UTC by Jens Georg
Modified: 2019-02-22 05:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix argument order (3.46 KB, patch)
2013-05-01 13:44 UTC, Jens Georg
committed Details | Review

Description Jens Georg 2013-04-05 10:43:35 UTC
From https://bugzilla.gnome.org/show_bug.cgi?id=696762#c6:

Incidentally, I was unable to get gupnp-av-cp to use WMP as a DMR, i.e., to
display an image hosted by WMP running on the same machine using gupnp-av-cp,
but this seems to be a separate issue and is not caused by commit d80d05f, even
though the error messages are similar.  I know this, as I reverted commit
d80d05f and was still unable to display an image on WMP using gupnp-av-cp. 
Note I was able to push an image to WMP's DMR using dLeyna.  I suspect this is
not working in gupnp-av-cp as gupnp-av-cp is using
gupnp_service_proxy_begin_action_hash.
Comment 1 Jens Georg 2013-05-01 13:44:25 UTC
Created attachment 242994 [details] [review]
Fix argument order
Comment 2 Jens Georg 2013-06-11 10:38:01 UTC
Attachment 242994 [details] pushed as 07f5dbb - Fix argument order