Fix argument order

https://bugzilla.gnome.org/show_bug.cgi?id=697325